<resources>
    <string name="torgi_full_name">Tactical Observation of RF &amp; GNSS Interference</string>
    <string name="notification">TORGI is collecting data...</string>
    <string name="notification_remote">TORGI is listening for remote data...</string>
    <string name="notification_historical">TORGI is reviewing old data...</string>
    <string name="quit_run_in_background">Run in background</string>
    <string name="does_not_support_battery_optimization">This device does not support battery optimization.</string>
    <string name="enable_battery_optimization">Settings adjustment recommended</string>
    <string name="battery_optimizations_narrative">Can I turn off battery optimization for TORGI? This will allow better updates from sensors but will drain the battery a bit more.</string>
    <string name="battery_optimize_yes">Ok</string>
    <string name="quit_torgi">Quit TORGI?</string>
    <string name="quit_torgi_narrative">Do you want to shutdown TORGI or do you want TORGI to keep collecting data in the background?</string>
    <string name="quit_yes">Shutdown</string>
    <string name="torgi_not_running">TORGI is not collecting...</string>
    <string name="collect_big_data">Collect Big Data?</string>
    <string name="big_data">Big Data</string>
    <string name="normal_data">Normal Data</string>
    <string name="big_data_battery">Collecting Big Data gets more information, but will use battery a bit faster and takes up more file space.</string>
    <string name="data_saved_location">Data saved in </string>
    <string name="waiting_baseline">Establishing GNSS baseline…</string>
    <string name="invalid_url">Enter a valid URL</string>

    <string name="action_switch_input">Source</string>
    <string name="source_this_device">This device\'s sensors</string>
    <string name="source_this_network">Sensor Observation Service</string>
    <string name="source_network_hint">network address</string>

    <!--<string name="torgi_ready_share">TORGI collected new data</string>
    <string name="torgi_ready_share_narrative">TORGI has new data to send back</string>-->
    <string name="share">Share</string>

    <!--Preferences-->
    <string name="action_settings">Settings</string>
    <string name="pref_category_logging">Logging</string>
    <string name="pref_category_connectivity">Connectivity</string>
    <string name="pref_broadcast">Share with other apps</string>
    <string name="pref_broadcast_narrative">Automatically share with other apps on this device information about EW risk changes.</string>
    <string name="pref_broadcast_sqan">Broadcast over SqAN</string>
    <string name="pref_broadcast_sqan_narrative">Automatically share EW risk changes over the Squad Area Network (SqAN) if installed.</string>
    <string name="pref_torgi_dir">Saved file directory</string>
    <string name="pref_torgi_dir_narrative">TORGI will save files in this directory.</string>
    <string name="title_activity_b">Activity</string>
    <string name="device_callsign">Device Callsign</string>
    <string name="device_callsign_narrative">How this device identifies itself on a network</string>
    <string name="gps_only">GPS Constellation Only</string>
    <string name="gps_only_narrative">Only consider GNSS data from the GPS constellation when calculating EW risks</string>
    <string name="share_geopackage">Share Collection File</string>
    <string name="share_geopackage_narrative">Automatically share the geopackage file as soon as TORGI closes</string>
    <string name="not_supported_title">TORGI may not work here</string>
    <string name="not_supported_description">TORGI is not receiving the raw measurement data that it needs to work. The device\'s GPS appears to be working correctly, so this probably means this device is not capable of gathering the raw data TORGI needs. You can continue to wait for this raw data, but it does not look like this device supports TORGI.</string>
    <string name="try_anyway">Keep Trying</string>
    <string name="uninstall">Uninstall TORGI</string>
    <string name="pref_forget_sos_title">Forget SOS Assignments</string>
    <string name="pref_forget_sos_narrative">Forget any indentification assignments made by an SOS server</string>
</resources>