<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_logging">

        <EditTextPreference
            android:key="callsign"
            android:title="@string/device_callsign"
            android:summary="@string/device_callsign_narrative" />

        <CheckBoxPreference
            android:key="bigdata"
            android:title="@string/big_data"
            android:summary="@string/big_data_battery"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="autoshare"
            android:title="@string/share_geopackage"
            android:summary="@string/share_geopackage_narrative"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="gpsonly"
            android:title="@string/gps_only"
            android:summary="@string/gps_only_narrative"
            android:defaultValue="false"/>

        <Preference
            android:key="savedir"
            android:title="@string/pref_torgi_dir"
            android:summary="@string/pref_torgi_dir_narrative"/>

    </PreferenceCategory>
</PreferenceScreen>