<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/sourceLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/sourceImageLocal"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_action_input"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_this_device"
            android:layout_toEndOf="@id/sourceImageLocal"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/darkgrey"
        android:layout_margin="6dp"/>

    <RelativeLayout
        android:id="@+id/sourceNetwork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/sourceImageNetwork"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_action_input"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/sourceLabelNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_this_network"
            android:layout_toEndOf="@id/sourceImageNetwork"
            android:layout_alignParentTop="true"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sourceNetworkIPLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/sourceImageNetwork"
            android:layout_below="@id/sourceLabelNetwork">

            <EditText
                android:id="@+id/sourceNetworkIP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/source_network_hint"/>
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
</LinearLayout>
